# bhl-hackathon-beszketnyky

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  README.md  __init__.py  complexity_agent.py  database.py  example_usage.py  model_factory.py  models_config.py  pyproject.toml  savings_tracker.py  server.py
backend/rag/: __init__.py  retriever.py  router.py  vector_build.py
backend/rag/chroma_db/333a27a1-d211-4158-8097-acec37cf77fe/: index_metadata.pickle
chatbot-extension/: .gitignore  build.gradle.kts  settings.gradle.kts
chatbot-extension/src/main/kotlin/com/greenassistant/: GreenAssistantToolWindowFactory.kt
db/: init.sql  models.csv  savings.sql
documentation/: architecture.html
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: chat-area.tsx  message-content.tsx  sidebar.tsx
frontend/lib/: api.ts
frontend/my-app/: package-lock.json
frontend/my-app/app/: globals.css  layout.tsx
frontend/my-app/components/: sidebar.tsx
ml_analysis/: data.csv  ml_analysis.ipynb
